fix: sidebar content when collapse

--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -17,6 +17,7 @@
   background-color: #b8b8b8;
   div {
     margin: 10px;
+    width: 230px;
   }
 }
 
